# Vestibule

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  HISTORY.md  PLAN.md
docs/plans/: M1-container-backend.md  M1-step4-lifecycle.md  M1-step5-selection.md  M1-step6-pinning.md
docs/reviews/: M1-codex-adversarial-review.md  M1-step6-adversarial-review.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/vestibule/: __init__.py  config.py  server.py  workspace.py
src/vestibule/backends/: base.py  container.py  naive.py  select.py
tests/: test_container.py  test_lifecycle.py  test_select.py  test_smoke.py  test_validation.py  test_workspace.py
