[project]
name = "vestibule-mcp"
version = "0.0.1"
description = "A local, kernel-isolated code-execution sandbox for AI agents, exposed as an MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Victor" }]
keywords = ["mcp", "sandbox", "ai-agents", "code-execution", "security", "isolation"]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
seccomp = ["pyseccomp>=0.1.2"]                       # optional defense-in-depth (Linux, M2)
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
vestibule-mcp = "vestibule.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vestibule"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "docker: requires a running Docker daemon and the pulled sandbox images",
]
